--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </style>
 
 <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v1.3.0/mapbox-gl-geocoder.js'></script>
+<script src='https://api.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
 <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v1.3.0/mapbox-gl-geocoder.css' type='text/css' />
 
 <div id='map'></div>
@@ -38,15 +39,13 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibGF1cmVuY2VuaWNvbCIsImEiOiJjaW8zdWNwaW8wMWN1dzNramw2ZGVwZDIxIn0.ypTc0f_ote92hBKe3BzKuw';
 
-// Holds mousedown state for events. if this
-// flag is active, we move the point on `mousemove`.
-var isDragging;
-
-// Is the cursor over a point? if this
-// flag is active, we listen for a mousedown event.
-var isCursorOverPoint;
-
 var coordinates = document.getElementById('coordinates');
+
+// GeoJSON object to hold our measurement features
+var geojson = {
+    "type": "FeatureCollection",
+    "features": []
+};
 
 var map = new mapboxgl.Map({
     container: 'map', // container id
@@ -55,55 +54,29 @@ var map = new mapboxgl.Map({
     zoom: 12 // starting zoom
 });
 
-var canvas = map.getCanvasContainer();
-
-function mouseDown() {
-    if (!isCursorOverPoint) return;
-
-    isDragging = true;
-
-    // Set a cursor indicator
-    canvas.style.cursor = 'grab';
-
-    // Mouse events
-    map.on('mousemove', onMove);
-    map.on('mouseup', onUp);
-}
-
-function onMove(e) {
-    if (!isDragging) return;
-    var coords = e.lngLat;
-
-    // Set a UI indicator for dragging.
-    canvas.style.cursor = 'grabbing';
-
-    // Update the Point feature in `geojson` coordinates
-    // and call setData to the source layer `point` on it.
-    var features = map.queryRenderedFeatures(e.point, { layers: ['point'] });
-
-    console.log(features)
-
-    features[0].geometry.coordinates = [coords.lng, coords.lat];
-    map.getSource('single-point').setData(features[0]);
-}
-
-function onUp(e) {
-    if (!isDragging) return;
-    var coords = e.lngLat;
-
-    // Print the coordinates of where the point had
-    // finished being dragged to on the map.
-    coordinates.style.display = 'block';
-    coordinates.innerHTML = 'Longitude: ' + coords.lng + '<br />Latitude: ' + coords.lat;
-    canvas.style.cursor = '';
-    isDragging = false;
-}
-
-
 var geocoder = new mapboxgl.Geocoder();
 map.addControl(geocoder);
 
+// Add zoom and rotation controls to the map.
+map.addControl(new mapboxgl.Navigation({position: 'top-left'}));
+
 map.on('load', function () {
+    map.addSource('geojson', {
+        type: 'geojson',
+        data: geojson
+    });
+
+    // Add styles to the map
+    map.addLayer({
+        id: 'points',
+        type: 'circle',
+        source: 'geojson',
+        paint: {
+            'circle-radius': 5,
+            'circle-color': '#007cbf'
+        }
+    });
+
     map.addSource('melbourne-buildings', {
         type: 'vector',
         url: 'mapbox://laurencenicol.6m4w20qu'
@@ -127,81 +100,116 @@ map.on('load', function () {
         }
     });
 
-    map.addSource('single-point', {
-        "type": "geojson",
-        "data": {
-            "type": "FeatureCollection",
-            "features": []
-        }
-    });
 
-    map.addLayer({
-        "id": "point",
-        "source": "single-point",
-        "type": "circle",
-        "paint": {
-            "circle-radius": 10,
-            "circle-color": "#007cbf"
-        }
-    });
 
-    // Listen for the `geocoder.input` event that is triggered when a user
-    // makes a selection and add a symbol that matches the result.
-    geocoder.on('result', function(ev) {
-        map.getSource('single-point').setData(ev.result.geometry);
-    });
+     
 
-    // If a feature is found on map movement,
-    // set a flag to permit a mousedown events.
-    map.on('mousemove', function(e) {
-        var features = map.queryRenderedFeatures(e.point, { layers: ['point'] });
+    // // When a click event occurs near a place, open a popup at the location of
+    // // the feature, with description HTML from its properties.
+    // map.on('click', function (e) {
+    //     var features = map.queryRenderedFeatures(e.point, { layers: ['point'] });
 
-        // Change point and cursor style as a UI indicator
-        // and set a flag to enable other mouse events.
-        if (features.length) {
-            map.setPaintProperty('point', 'circle-color', '#3bb2d0');
-            canvas.style.cursor = 'move';
-            isCursorOverPoint = true;
-            map.dragPan.disable();
-        } else {
-            map.setPaintProperty('point', 'circle-color', '#3887be');
-            canvas.style.cursor = '';
-            isCursorOverPoint = false;
-            map.dragPan.enable();
-        }
-    });
+    //     if (!features.length) {
+    //         return;
+    //     }
 
-    // Set `true` to dispatch the event before other functions call it. This
-    // is necessary for disabling the default map dragging behaviour.
-    map.on('mousedown', mouseDown, true);
+    //     var feature = features[0];
+
+    //     // Populate the popup and set its coordinates
+    //     // based on the feature found.
+    //     var popup = new mapboxgl.Popup()
+    //         .setLngLat(feature.geometry.coordinates)
+    //         .setHTML(feature.properties["Number of floors (above ground)"])
+    //         .addTo(map);
+
+    //     var coords = e.lngLat;
+
+    //     // Print the coordinates of where the point had
+    //     // finished being dragged to on the map.
+    //     coordinates.style.display = 'block';
+    //     coordinates.innerHTML = 'Longitude: ' + coords.lng + '<br />Latitude: ' + coords.lat;
+    // });
 });
 
-// When a click event occurs near a place, open a popup at the location of
-// the feature, with description HTML from its properties.
-map.on('click', function (e) {
-    var features = map.queryRenderedFeatures(e.point, { layers: ['melbourne-buildings'] });
+// Listen for the `geocoder.input` event that is triggered when a user
+// makes a selection and add a symbol that matches the result.
+geocoder.on('result', function(ev) {
+    console.log(ev);
 
-    if (!features.length) {
-        return;
+    if (geojson.features.length > 0) geojson.features.pop();
+    geojson.features.push(ev.result);
+
+    console.log(geojson)
+
+    map.getSource('geojson').setData(geojson);
+
+    coords = ev.result.geometry.coordinates
+
+    // Print the coordinates of where the point had
+    // finished being dragged to on the map.
+    coordinates.style.display = 'block';
+    coordinates.innerHTML = 'Longitude: ' + coords[0] + '<br />Latitude: ' + coords[1];
+});
+
+map.on('click', function(e) {
+    var features = map.queryRenderedFeatures(e.point, { layers: ['points'] });
+
+    // Remove the linestring from the group
+    // So we can redraw it based on the points collection
+    if (geojson.features.length > 0) geojson.features.pop();
+
+    // If a feature was clicked, remove it from the map
+    if (features.length) {
+        var id = features[0].properties.id;
+        geojson.features = geojson.features.filter(function(point) {
+            return point.properties.id !== id;
+        });
+    } else {
+        var point = {
+            "type": "Feature",
+            "geometry": {
+                "type": "Point",
+                "coordinates": [
+                    e.lngLat.lng,
+                    e.lngLat.lat
+                ]
+            },
+            "properties": {
+                "id": String(new Date().getTime())
+            }
+        };
+
+        geojson.features.push(point);
     }
 
-    var feature = features[0];
+    // if (geojson.features.length > 1) {
+    //     linestring.geometry.coordinates = geojson.features.map(function(point) {
+    //         return point.geometry.coordinates;
+    //     });
 
-    console.log(feature)
+    //     geojson.features.push(linestring);
 
-    // Populate the popup and set its coordinates
-    // based on the feature found.
-    var popup = new mapboxgl.Popup()
-        .setLngLat(feature.geometry.coordinates)
-        .setHTML(feature.properties["Number of floors (above ground)"])
-        .addTo(map);
+    //     // Populate the distanceContainer with total distance
+    //     var value = document.createElement('pre');
+    //     value.textContent = 'Total distance: ' + turf.lineDistance(linestring).toLocaleString() + 'km';
+    //     distanceContainer.appendChild(value);
+    // }
+
+    var coords = e.lngLat;
+
+    // Print the coordinates of where the point had
+    // finished being dragged to on the map.
+    coordinates.style.display = 'block';
+    coordinates.innerHTML = 'Longitude: ' + coords.lng + '<br />Latitude: ' + coords.lat;
+
+    map.getSource('geojson').setData(geojson);
 });
 
 // Use the same approach as above to indicate that the symbols are clickable
 // by changing the cursor style to 'pointer'.
 map.on('mousemove', function (e) {
-    var features = map.queryRenderedFeatures(e.point, { layers: ['melbourne-buildings'] });
-    map.getCanvas().style.cursor = (features.length) ? 'pointer' : '';
+    var features = map.queryRenderedFeatures(e.point, { layers: ['points'] });
+    map.getCanvas().style.cursor = (features.length) ? 'pointer' : 'crosshair';
 });
 
 </script>
