--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 				<nav class="fh5co-main-nav">
 					<ul>
 						<li class="fh5co-active"><a href="index.html"><span>Home</span></a></li>
-						<li><a href="services.html"><span>Services</span></a></li>
-						<li><a href="about.html"><span>About</span></a></li>
-						<li><a href="contact.html"><span>Contact</span></a></li>
+						<li><a href="map.html"><span>Map</span></a></li>
+						<li><a href="about.html"><span>About Us</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -85,8 +84,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">We made a map</h1>
-							<p>There's a project page at <a href="http://github.com/jamiecook/pedestimate">github</a></p>
+							<h1 class="text-center">Pedestimate</h1>
+              <p>Pedestrian traffic estimates for business</p>
 						</div>
 					</div>
 				</div>
@@ -97,8 +96,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5">
-						<h2>A thing</h2>
-            <a href="map.html">Look at a map</a>
+						<h2>Finding the perfect location</h2>
+              <p>Put the content here</p>
+							<p>For the nitty gritty, check out our <a href="http://github.com/jamiecook/pedestimate">github repo.</a></p>
 					</div>
 				</div>
 			</div>
@@ -117,11 +117,8 @@
 				<div class="col-md-3 col-md-push-1">
 					<h3>Quick Links</h3>
 					<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Products</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="http://github.com/jamiecook/pedestimate">Github</a></li>
 					</ul>
 				</div>
 			</div>
